--- a/aws-s3-app/package.json
+++ b/aws-s3-app/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "playwright": "^1.48.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
